style: ensure events are always visible

--- a/apps/client/src/features/rundown/Rundown.module.scss
+++ b/apps/client/src/features/rundown/Rundown.module.scss
@@ -26,3 +26,7 @@
     margin-top: 24px;
   }
 }
+
+.spacer {
+  min-height: 50vh;
+}
